--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,39 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 body{
+    background: green;
+}
+.card{
+    display:inline-block;
+    margin:auto;
+    height: 400px;
+    width: 250px;
     background: white;
+    padding:10px;
+    border-radius: 20px;
+    position: relative;
+    text-align: center;
+    font-size: 65px;
+    position: relative;
+    
+}
+.palo-alto{
+    position: absolute;
+    top: 20px;;
+    left: 20px;
+    font-size: 60px;
+}
+.palo-bajo{
+    position: absolute;
+    bottom:20px;
+    right: 20px;
+    font-size: 60px;
+    transform: rotate(180deg);
+}
+.numero{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 80px;
 }
