--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body{
     text-align: center;
     font-size: 65px;
     position: relative;
+    margin-top:100px;
     
 }
 .palo-alto{
@@ -36,4 +37,13 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 80px;
+}
+.spades,.clubs{
+    color: rgb(0, 0, 0)
+}
+.hearts,.diams{
+    color:red;
+}
+#btn{
+  margin-left:820px
 }
